force-app/main/default/objects/NS_VDN__c/NS_VDN__c.object-meta.xml
<CustomObject>
    <description>This object is maintained to keep VDN detail and ANI Maintenence</description>
    <label>VDN</label>
    <nameField>
        <label>VDN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VDN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>