force-app/main/default/objects/NS_VDN__c/fields/NS_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NS_EffectiveDate__c</fullName>
    <description>It indicates VDN&#39;s effective date</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>