force-app/main/default/objects/NS_VDN__c/fields/NS_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>NS_ExpirationDate__c</fullName>
    <description>It indicates VDN&#39;s expiration date</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>