force-app/main/default/objects/NS_VDN__c/fields/NS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>NS_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates the status of the VDN</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>