force-app/main/default/objects/NS_VDN__c/fields/NS_ServiceGroup__c.field-meta.xml
<CustomField>
    <fullName>NS_ServiceGroup__c</fullName>
    <description>It indicates different service groups of VDN users</description>
    <label>Service Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>