force-app/main/default/objects/NS_VDN__c/fields/NS_VDNCode__c.field-meta.xml
<CustomField>
    <fullName>NS_VDNCode__c</fullName>
    <description>VDN Code</description>
    <externalId>true</externalId>
    <label>VDN Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>