force-app/main/default/objects/NS_VDN__c/fields/NS_VDNDescription__c.field-meta.xml
<CustomField>
    <fullName>NS_VDNDescription__c</fullName>
    <description>VDN Description for different VDN (ANI)</description>
    <label>VDN Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>